cleaned up some typos; added some links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm John, a full stuck developer, a JavaScript and Python enthusiast, on a quest to continually improve my skills. I am currently searching for full-time work. If you have a project that you want to get started or a job opportunity, then get in touch.</p>
+                        <p>Hello! I'm John, a full stack developer, a JavaScript and Python enthusiast, on a quest to continually improve my skills. I am currently searching for full-time work. If you have a project that you want to get started or a job opportunity, then get in touch.</p>
                         <a href="./assets/pdf/john_CV.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3>What i do</h3>
+                        <h3>What I do</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
@@ -233,7 +233,7 @@
                             <div class="portfolio-item-info">
                                 <h4>Pokemon API</h4>
                                 <a href="https://darkraginginferno.github.io/pokeAPI/index.html" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="https://johnpoku.com/pokeAPI/index.html"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
