--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <!-- <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a> -->
 
                 </div><!-- /.navbar-header -->
 
@@ -325,7 +325,7 @@
                     <a class="icon github-bg" href="https://github.com/DarkRagingInferno"><i class="fab fa-github"></i></a>
                     <!-- <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a> -->
                 </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2020. All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
@@ -369,7 +369,7 @@
             <p>ImSimPy is a medical imaging software application. Written in Python the application implements a 3D Voxel based graphics and image processing techniques. The project hopes to provide a simulator that can be used for training and eductional purposes.</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <!-- <a href="#" class="btn btn-fill">Visit Page</a> -->
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
@@ -388,7 +388,7 @@
             <p>A personal Allergy Application project. Working with 3-5 other software developers to produce a React-nativbe mobile application to tell users what grocery items they are allergic to. Project implements RESTful API techniques in relation to a comprehensive MySQL database utilizing stored functions and procedures to query thousands of items with a multitude of allergies/allergens.</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <!-- <a href="#" class="btn btn-fill">Visit Page</a> -->
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
