changed from hotmail to gmail

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
 
                 <div class='contact-me'>
-                    <span>Email: jvbpoku@hotmail.com</span>
+                    <span>Email: jvbpoku@gmail.com</span>
                     <span>
                         Vancouver, British Columbia, Canada 
                     </span>
