--- a/index.html
+++ b/index.html
@@ -139,88 +139,88 @@
             <div class="my-skils mb-5">
 				<div class="skills-container d-flex ftco-animate">
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">JAVASCRIPT</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">REACT</h2>
 						</div>
 					</div>
 				</div>
 				<div class="skills-container d-flex ftco-animate">
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">C#</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">JAVA</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">PYTHON</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">SWIFT</h2>
 						</div>
 					</div>
 				</div>
 				<div class="skills-container d-flex ftco-animate">
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">NODE</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">.NET CORE</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">AGILE</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">GIT</h2>
 						</div>
 					</div>
 				</div>
 				<div class="skills-container d-flex ftco-animate">
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">SQL</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">MYSQL</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">Azure</h2>
 						</div>
 					</div>
 					<div class="col-lg-3">
-						<div class="bg-white rounded-lg shadow p-4 skill-item">
+						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">AWS</h2>
 						</div>
 					</div>
