--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   				</div>
 
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/allergyapp.PNG);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/allergies.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">Allergy App</a></h3>
