--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Hello! I'm John, a full stack developer, a JavaScript and Python enthusiast. I'm on a quest to continually improve my skills. I am currently searching for full-time work. If you have a project that you want to get started or a job opportunity.</p>
+		            <p>Hello! I'm John, a full stack developer, a JavaScript and Python enthusiast. I'm on a quest to continually improve my skills. I am currently searching for full-time work. If you have a project that you want to get started or a job opportunity, you can contact me with the information provided below.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>John Poku</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>jvbpoku@gmail.com</span></li>
