--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">ImSimPy</a></h3>
-	    					<span>ImSimPy is a medical imaging software application. Written in Python the application implements a 3D Voxel based graphics and image processing techniques. The project hopes to provide a simulator that can be used for training and eductional purposes.</span>
+	    					<span>ImSimPy is a medical imaging software application written in Python that implements 3D Voxel based graphics and image processing techniques. The project provides a simulator that can be used for training and eductional purposes.</span>
 	    				</div>
     				</div>
   				</div>
@@ -312,7 +312,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">Allergy App</a></h3>
-	    					<span>A React-native application that informs users what grocery items they are allergic to by implementing REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with a multitude of allergies/allergens.</span>
+	    					<span>A React-native app that informs users what grocery items they are allergic to by implementing REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with a multitude of allergies.</span>
 	    				</div>
     				</div>
     			</div>
