--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
   				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/ImSimPy.PNG);">
     					<div class="overlay"></div>
-	    				<div class="text text-center p-4 overflow">
+	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">ImSimPy</a></h3>
-	    					<span>ImSimPy is a medical imaging software application written in Python, that implements 3D Voxel based graphics and image processing techniques, providing a simulator that can be used for training and eduction.</span>
+	    					<span class="overflow">ImSimPy is a medical imaging software application written in Python, that implements 3D Voxel based graphics and image processing techniques, providing a simulator that can be used for training and eduction.</span>
 	    				</div>
     				</div>
   				</div>
@@ -310,9 +310,9 @@
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/allergies.png);">
     					<div class="overlay"></div>
-	    				<div class="text text-center p-4 overflow">
+	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">Allergy App</a></h3>
-	    					<span>A React-native app that informs users what grocery items they are allergic to by implementing REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with a multitude of allergies.</span>
+	    					<span class="overflow">A React-native app that informs users what grocery items they are allergic to by implementing REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with a multitude of allergies.</span>
 	    				</div>
     				</div>
     			</div>
