--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4 overflow">
 	    					<h3><a href="#projects-section">Allergy App</a></h3>
-	    					<span>A React-native app that informs users what grocery items they are allergic to by implementing REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with a multitude of allergies.</span>
+	    					<span>A React-native app that informs users what grocery items they are allergic. It implements REST API techniques with a MySQL database designed with stored functions &amp procedures to query thousands of items with many allergies.</span>
 	    				</div>
     				</div>
     			</div>
