--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">ImSimPy</a></h3>
-	    					<span>A medical imaging software app, written in Python, that implements 3D Voxel based graphics and image processing techniques, providing a simulator that can be used for training and eduction.</span>
+	    					<span>A medical imaging software app, written in Python, that implements 3D Voxel based graphics and image processing techniques, providing a simulator that can be used for training and education.</span>
 	    				</div>
     				</div>
   				</div>
