--- a/pokeAPI/index.html
+++ b/pokeAPI/index.html
@@ -38,7 +38,7 @@
 						<a href="https://darkraginginferno.github.io/pokeAPI/doc/documentation.html" class="">Documentation</a>
 					</li>
 					<li class="">
-						<a href="https://amarsingara.com/" class="">Contact</a>
+						<spanclass="">Contact: <a href="https://amarsingara.com/">Amar S.</a> | <a href="https://johnpoku.com">John P.</a></span>
 					</li>
 				</ul>
 			</div>
