--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	<link rel="icon" type="image/png" href="./assets/images/favicon.ico">
 
     <link rel="stylesheet" href="assets/css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -21,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/flaticon.css">
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/index.css">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -167,23 +169,6 @@
 					</div>
 					<div class="col-lg-3">
 						<div class=" rounded-lg shadow p-4 skill-item">
-							<h2 class="h5 font-weight-bold text-center mb-4">JAVA</h2>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class=" rounded-lg shadow p-4 skill-item">
-							<h2 class="h5 font-weight-bold text-center mb-4">PYTHON</h2>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class=" rounded-lg shadow p-4 skill-item">
-							<h2 class="h5 font-weight-bold text-center mb-4">SWIFT</h2>
-						</div>
-					</div>
-				</div>
-				<div class="skills-container d-flex ftco-animate">
-					<div class="col-lg-3">
-						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">NODE</h2>
 						</div>
 					</div>
@@ -195,11 +180,6 @@
 					<div class="col-lg-3">
 						<div class=" rounded-lg shadow p-4 skill-item">
 							<h2 class="h5 font-weight-bold text-center mb-4">AGILE</h2>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class=" rounded-lg shadow p-4 skill-item">
-							<h2 class="h5 font-weight-bold text-center mb-4">GIT</h2>
 						</div>
 					</div>
 				</div>
@@ -280,18 +260,17 @@
 
     <section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
-    		<div class="row no-gutters justify-content-center pb-5">
+    		<!-- <div class="row no-gutters justify-content-center pb-5"> -->
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">My Projects</h1>
             <h2 class="mb-4">My Projects</h2>
           </div>
         </div>
-    		<div class="row no-gutters">
+    		<!-- <div class="row no-gutters">
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/pokemonAPI.PNG);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<!-- <h3><a href="https://johnpoku.com/pokeAPI/index.html">Pokemon API</a></h3> -->
 	    					<h3>Pokemon API <a href="https://johnpoku.com/pokeAPI/index.html"><span class="icon-link" style="font-size: 1em"></span></a></h3>
 	    					<span>A RESTful service API taking on the beloved Pokemon theme. Designed with a complete MySQL relational database using AWS with utilized stored procedures with respective endpoints.</span>
 	    				</div>
@@ -308,6 +287,46 @@
   				</div>
 
     			<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/allergies.png);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#projects-section">Allergy App</a></h3>
+	    					<span>A React-native app that informs users what grocery items they are allergic. It implements REST API techniques with a MySQL database with stored functions &amp procedures to query thousands of items with many allergies.</span>
+	    				</div>
+    				</div>
+    			</div>
+    		</div> -->
+    		<div id='projects-1' class="row no-gutters">
+    			<div class="col-md-4 projects">
+    				<div class="project img project-img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/minisis.PNG); border: 1px solid rgb(228, 228, 228);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3>Pokemon API <a href="https://minisisinc.com/"><span class="icon-link" style="font-size: 1em"></span></a></h3>
+	    					<span>A database management solutions tech company. Whether you have archival, museum, or library holdings, or a combinations of all 3, we have a solution that will work for your unique needs.</span>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-4 projects">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/ImSimPy.PNG);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a href="#projects-section">ImSimPy</a></h3>
+	    					<span>A medical imaging software app, written in Python, that implements 3D Voxel based graphics and image processing techniques, providing a simulator that can be used for training and education.</span>
+	    				</div>
+    				</div>
+  				</div>
+    		</div>
+    		<div id='projects-2' class="row no-gutters">
+    			<div class="col-md-4 projects">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/pokemonAPI.PNG);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3>Pokemon API <a href="https://johnpoku.com/pokeAPI/index.html"><span class="icon-link" style="font-size: 1em"></span></a></h3>
+	    					<span>A RESTful service API taking on the beloved Pokemon theme. Designed with a complete MySQL relational database using AWS with utilized stored procedures with respective endpoints.</span>
+	    				</div>
+    				</div>
+  				</div>
+				  <div class="col-md-4 projects">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/allergies.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
