update to force updated changes

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     				</div>
   				</div>
   				<div class="col-md-4 projects">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/ImSimPy.PNG);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center useless-css" style="background-image: url(assets/images/ImSimPy.PNG);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">ImSimPy</a></h3>
