--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
     		<div id='projects-1' class="row no-gutters">
     			<div class="col-md-4 projects">
-    				<div class="project img project-img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/minisis.PNG); border: 1px solid rgb(228, 228, 228);">
+    				<div class="project img project-img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/minisis.png); border: 1px solid rgb(228, 228, 228);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3>Pokemon API <a href="https://minisisinc.com/"><span class="icon-link" style="font-size: 1em"></span></a></h3>
