--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     				<div class="project img project-img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(assets/images/minisis.png); border: 1px solid rgb(228, 228, 228);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3>Minisis Inc <a href="https://minisisinc.com/"><span class="icon-link" style="font-size: 1em"></span></a></h3>
+	    					<h3>MINISIS Inc <a href="https://minisisinc.com/"><span class="icon-link" style="font-size: 1em"></span></a></h3>
 	    					<span>A database management solutions tech company. Whether you have archival, museum, or library holdings, or a combinations of all 3, we have a solution that will work for your unique needs.</span>
 	    				</div>
     				</div>
